fixing signup button alignment inside the dropdown list

--- a/src/components/UI/Button.css
+++ b/src/components/UI/Button.css
@@ -17,6 +17,7 @@ button.primary:hover {
 
 .block {
   width: 100%;
+  padding: 14px 16px;
   display: block;
 }
 
