--- a/src/components/UI/DropDown.css
+++ b/src/components/UI/DropDown.css
@@ -4,6 +4,7 @@
   height: max-content;
   padding: 20px;
   box-sizing: border-box;
+  text-align: center;
   border-radius: 16px;
   top: 10%;
   left: 10%;
